libcalico-go/test/mock-policies.yaml
#These policies are used for testing if the correct policy name is returned when no name is part of the projectcalico.org/metadata annotation
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: default.prefix-test-policy
  namespace: default
  annotations:
    test: test
    projectcalico.org/metadata: '{}'
spec:
  tier: default
  types:
    - Ingress
    - Egress

---

apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: default.prefix-test-policy
  namespace: default
  annotations:
    test: test
    projectcalico.org/metadata: '{}'
spec:
  tier: default
  types:
    - Ingress
    - Egress
